--- a/src/styles/styleProjects.css
+++ b/src/styles/styleProjects.css
@@ -71,7 +71,7 @@ button {
     }
 
     img {
-        height: 251px;
+        height: 25vh;
         width: 100%;
         border-radius: 5px;
         border-radius: 10px
